--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,21 @@ ul {
   padding: 0;
 }
 
+.desktop-only {
+  display: none;
+}
+
+.mobile-only {
+  display: block;
+}
+
 /*main styles*/
 .top-wrapper {
-  padding: 30px 0;
+  padding: 0px 0 30px;
+}
+
+.top-wrapper .banner-image {
+  text-align: center;
 }
 
 .top-wrapper .banner-tabpanel {
@@ -137,19 +149,33 @@ ul {
   width: 320px;
   padding: 50px 70px;
   top: -25px;
-  left: -425px;
+  left: -25px;
   background: #65617D;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
   -webkit-transform-origin: 0% 0%;
           transform-origin: 0% 0%;
-  -webkit-transform: translate(-100%, 0);
-          transform: translate(-100%, 0);
-  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  display: none;
+  opacity: 0;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 #menu li {
@@ -173,6 +199,37 @@ ul {
   -webkit-transform: none;
           transform: none;
   opacity: 1;
+  display: block;
+  -webkit-animation: fadein 0.5s;
+  /* Safari, Chrome and Opera > 12.1 */
+  /* Firefox < 16 */
+  /* Internet Explorer */
+  /* Opera < 12.1 */
+  animation: fadein 0.5s;
+}
+
+.navbar-nav li a {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #18131D;
+  font-weight: 700;
+}
+
+.nav > li > a:focus, .nav > li > a:hover {
+  background: none;
+}
+
+.top-btn {
+  border: 2px solid #3E3EFF;
+  padding: 7px 18px;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #000;
+  font-weight: 700;
+  background: none;
+  float: right;
+  margin-left: 40px;
+  margin-top: 1px;
 }
 
 /*tab styles*/
@@ -218,43 +275,53 @@ ul {
 
 .search-wrap {
   background: #fff;
-  border-radius: 22px;
-  padding: 18px 25px;
+  border-radius: 0px;
   margin: 40px 0;
+  position: relative;
+  border: 1px solid #FF6347;
 }
 
 .search-wrap input {
   border: none;
   color: #B9B8B7;
-  font-size: 20px;
-  width: 91%;
+  font-size: 14px;
+  width: 100%;
   vertical-align: middle;
+  background: none;
+  padding: 15px 20px;
+}
+
+.search-wrap input:focus {
+  outline: none;
 }
 
 .search-wrap .search-btn {
   display: inline-block;
-  width: 45px;
-  height: 45px;
+  width: 30px;
+  height: 30px;
   background: url(../images/search-icon.png) no-repeat center center #65617D;
   border-radius: 25px;
   vertical-align: middle;
+  position: absolute;
+  top: 11px;
+  right: 20px;
 }
 
 .lg-title {
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 600;
   color: #000;
   font-family: 'Nunito', sans-serif;
 }
 
 .sub-txt {
-  font-size: 18px;
+  font-size: 10px;
   color: #65617D;
   position: relative;
 }
 
 .sub-txt span {
-  padding: 0 20px;
+  padding: 0 5px;
   display: inline-block;
   position: relative;
 }
@@ -268,14 +335,14 @@ ul {
 }
 
 .sub-txt span:after {
-  height: 17px;
+  height: 10px;
   background: #65617D;
   content: '';
   width: 1px;
   display: inline-block;
   position: absolute;
-  top: 3px;
-  right: -5px;
+  top: 2px;
+  right: -3px;
 }
 
 .amenities {
@@ -283,13 +350,14 @@ ul {
 }
 
 .amenities img {
-  min-height: 110px;
   margin-bottom: 20px;
+  width: 100%;
+  min-height: 69px;
 }
 
 .amenities .amenities-name {
-  font-size: 17px;
-  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-family: 'Nunito', sans-serif;
   font-weight: 600;
   color: #000;
 }
@@ -299,15 +367,17 @@ section {
 }
 
 .title-2 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 700;
   color: #000;
+  font-family: 'Nunito', sans-serif;
 }
 
 .title-2 a {
   font-weight: 400;
+  font-size: 16px !important;
   color: #6C6C6C;
-  font-size: 22px;
+  font-size: 24px;
   margin-left: 20px;
 }
 
@@ -319,6 +389,7 @@ section {
   background: url(../images/product-bg.png) no-repeat center center;
   min-height: 145px;
   text-align: center;
+  display: block;
 }
 
 .products-list .prod-wrap img {
@@ -336,6 +407,7 @@ section {
   text-transform: uppercase;
   color: #000;
   font-weight: 900;
+  font-family: 'Nunito', sans-serif;
 }
 
 .product-txt-wrap .price {
@@ -343,7 +415,7 @@ section {
 }
 
 .product-txt-wrap .price .strike-price {
-  font-size: 19px;
+  font-size: 14px;
   font-style: italic;
   color: #A0A0A0;
   font-weight: 400;
@@ -352,13 +424,13 @@ section {
 }
 
 .product-txt-wrap .price span {
-  font-size: 19px;
+  font-size: 14px;
   font-weight: 700;
   color: #FF6347;
 }
 
 .product-txt-wrap .prod-desc {
-  font-size: 17px;
+  font-size: 12px;
   color: #414140;
 }
 
@@ -394,37 +466,25 @@ section {
 }
 
 .services-list li {
-  height: 300px;
   text-align: center;
   padding-top: 40px;
 }
 
-.services-list li:nth-child(even) {
-  background: #FAFAFA;
-  border-right: 1px solid #D1CCCC;
-}
-
-.services-list li:nth-child(odd) {
-  border-right: 1px solid #D1CCCC;
-}
-
-.services-list li:nth-child(1), .services-list li:nth-child(2), .services-list li:nth-child(3) {
-  border-bottom: 1px solid #D1CCCC;
-}
-
-.services-list li:nth-child(3), .services-list li:nth-child(6) {
-  border-right: none;
-}
-
 .services-list li img {
   min-height: 146px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  max-width: 150px;
+}
+
+.services-list li a {
+  display: block;
 }
 
 .services-list li .services-txt {
   font-size: 20px;
   font-weight: 700;
   color: #414140;
+  display: block;
 }
 
 .label-list {
@@ -460,6 +520,10 @@ footer {
   padding: 50px 0 20px;
 }
 
+footer div {
+  text-align: center;
+}
+
 footer .col-half-offset {
   margin-left: 4.166666667%;
 }
@@ -471,7 +535,7 @@ footer .footer-heading {
 }
 
 footer .footer-links li {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 footer .footer-links a {
@@ -516,19 +580,20 @@ footer .social-links .twitter {
 
 footer .social-links .f-like {
   background-image: url(../images/f-like.png);
-  width: 65px;
+  width: 71px;
   margin-left: 20px;
 }
 
 footer .social-links .f-share {
   background-image: url(../images/f-share.png);
-  width: 78px;
+  width: 76px;
 }
 
 footer .social-links .fb-txt {
   font-size: 13px;
   font-weight: 700;
   color: #000;
+  margin-top: 20px;
   display: inline-block;
 }
 
@@ -540,15 +605,25 @@ footer .copy-right {
   color: #65617D;
   font-weight: 500;
   padding: 20px 0;
-  background: url(../images/cards.png) no-repeat right center;
+}
+
+footer .copy-right .footer-img-wrap {
+  display: block;
+  text-align: center;
+  margin-top: 20px;
 }
 
 /*@desktop*/
 @media (min-width: 768px) {
+  .desktop-only {
+    display: block;
+  }
+  .mobile-only {
+    display: none;
+  }
   .top-wrapper {
-    background-image: -webkit-gradient(linear, left top, right bottom, from(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#faeae2), color-stop(#fcded1), color-stop(#fed3c0), color-stop(#ffb99d), color-stop(#ff9d7d), color-stop(#ff7e62), to(#ff5b4a));
-    background-image: linear-gradient(to right bottom, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #faeae2, #fcded1, #fed3c0, #ffb99d, #ff9d7d, #ff7e62, #ff5b4a);
-    min-height: 768px;
+    background-image: -webkit-gradient(linear, left top, right bottom, from(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#f7f5f4), color-stop(#faeae2), color-stop(#fcded1), color-stop(#fed3c0), color-stop(#ffb99d), color-stop(#ff9d7d), to(#ff7e62));
+    background-image: linear-gradient(to right bottom, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #f7f5f4, #faeae2, #fcded1, #fed3c0, #ffb99d, #ff9d7d, #ff7e62);
   }
   #menu {
     width: 400px;
@@ -556,33 +631,89 @@ footer .copy-right {
   .navbar {
     margin-bottom: 30px;
   }
-  .navbar-nav li a {
-    font-size: 16px;
-    text-transform: uppercase;
-    color: #18131D;
-    font-weight: 700;
-  }
-  .nav > li > a:focus, .nav > li > a:hover {
-    background: none;
-  }
-  .top-btn {
-    border: 2px solid #3E3EFF;
-    padding: 13px 18px;
-    text-transform: uppercase;
-    font-size: 15px;
-    color: #000;
-    font-weight: 700;
-    background: none;
-    float: right;
-    margin-left: 40px;
-    margin-top: -5px;
-  }
   .navbar-collapse {
     padding-right: 0;
     padding: 20px 0;
   }
   .nav > li > a {
     padding: 10px 20px;
+  }
+  .banner-image {
+    text-align: right;
+  }
+  .search-wrap {
+    border: none;
+    border-radius: 22px;
+  }
+  .lg-title {
+    font-size: 40px;
+    text-align: left;
+  }
+  .sub-txt {
+    font-size: 18px;
+  }
+  .sub-txt span {
+    padding: 0 20px;
+  }
+  .sub-txt span:after {
+    height: 17px;
+    top: 3px;
+    right: -5px;
+  }
+  .amenities img {
+    min-height: 110px;
+    width: auto;
+  }
+  .amenities .amenities-name {
+    font-size: 17px;
+  }
+  .title-2 {
+    font-size: 28px;
+  }
+  .title-2 a {
+    font-size: 22px !important;
+  }
+  .services-list li {
+    height: 300px;
+  }
+  .services-list li:nth-child(even) {
+    background: #FAFAFA;
+    border-right: 1px solid #D1CCCC;
+  }
+  .services-list li:nth-child(odd) {
+    border-right: 1px solid #D1CCCC;
+  }
+  .services-list li:nth-child(1), .services-list li:nth-child(2), .services-list li:nth-child(3) {
+    border-bottom: 1px solid #D1CCCC;
+  }
+  .services-list li:nth-child(3), .services-list li:nth-child(6) {
+    border-right: none;
+  }
+  .services-list li img {
+    width: auto;
+    max-width: inherit;
+    margin-bottom: 40px;
+  }
+  footer div {
+    text-align: left;
+  }
+  footer .fb-txt {
+    margin-top: 0;
+  }
+  footer .copy-right {
+    overflow: hidden;
+  }
+  footer .copy-right .footer-img-wrap {
+    float: right;
+    text-align: center;
+    margin-top: -10px;
+  }
+}
+
+/*@tab*/
+@media (min-width: 768px) and (max-width: 991px) {
+  .services-list li img {
+    max-width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
