--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,13 @@ ul {
 .navbar-brand {
   height: auto;
   padding: 0;
+  width: 130px;
 }
 
 .navbar-brand > img {
   height: 100%;
-  padding: 15px 30px;
-  width: auto;
+  padding: 20px 10px;
+  width: 100%;
 }
 
 #menuToggle {
@@ -224,16 +225,20 @@ ul {
 }
 
 .top-btn {
-  border: 2px solid #3E3EFF;
-  padding: 7px 18px;
+  padding: 10px 18px;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
   color: #000;
   font-weight: 700;
   background: none;
   float: right;
-  margin-left: 40px;
-  margin-top: 1px;
+  margin-top: 23px;
+  position: relative;
+  overflow: hidden;
+}
+
+.top-btn:hover {
+  color: #000;
 }
 
 /*tab styles*/
@@ -484,7 +489,7 @@ section {
 }
 
 .services-list li .services-txt {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
   color: #414140;
   display: block;
@@ -631,6 +636,12 @@ footer .copy-right .footer-img-wrap {
   #menu {
     width: 400px;
   }
+  .navbar-brand {
+    width: auto;
+  }
+  .navbar-brand > img {
+    padding: 15px 30px;
+  }
   .navbar {
     margin-bottom: 30px;
   }
@@ -643,6 +654,11 @@ footer .copy-right .footer-img-wrap {
   }
   .nav-tabs li > a {
     font-size: 15px;
+  }
+  .top-btn {
+    margin-left: 40px;
+    font-size: 14px;
+    margin-top: 1px;
   }
   .banner-image {
     text-align: right;
@@ -709,6 +725,9 @@ footer .copy-right .footer-img-wrap {
   footer .fb-txt {
     margin-top: 0;
   }
+  footer .services-txt {
+    font-size: 20px;
+  }
   footer .copy-right {
     overflow: hidden;
   }
@@ -724,5 +743,109 @@ footer .copy-right .footer-img-wrap {
   .services-list li img {
     max-width: 100%;
   }
+}
+
+.anim-btn:before, .anim-btn:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #252525;
+}
+
+.anim-btn:before {
+  top: 0;
+}
+
+.anim-btn:after {
+  bottom: 0;
+}
+
+.anim-btn:hover > * > *:before, .anim-btn:hover > * > *:after {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.anim-btn:hover > * > * > *:before, .anim-btn:hover > * > * > *:after {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.anim-btn > *:before, .anim-btn > *:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 2px;
+  background-color: #252525;
+}
+
+.anim-btn > *:before {
+  left: 0;
+}
+
+.anim-btn > *:after {
+  right: 0;
+}
+
+.anim-btn > * > *:before, .anim-btn > * > *:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  z-index: 9;
+  height: 2px;
+  width: 100%;
+  background-color: #FF6347;
+}
+
+.anim-btn > * > *:before {
+  top: 0;
+  -webkit-transform: translate3d(-105%, 0, 0);
+  transform: translate3d(-105%, 0, 0);
+  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.anim-btn > * > *:after {
+  bottom: 0;
+  -webkit-transform: translate3d(105%, 0, 0);
+  transform: translate3d(105%, 0, 0);
+  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.anim-btn > * > * > *:before, .anim-btn > * > * > *:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  z-index: 9;
+  height: 100%;
+  width: 2px;
+  background-color: #FF6347;
+}
+
+.anim-btn > * > * > *:before {
+  left: 0;
+  -webkit-transform: translate3d(0, 105%, 0);
+  transform: translate3d(0, 105%, 0);
+  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.anim-btn > * > * > *:after {
+  right: 0;
+  -webkit-transform: translate3d(0, -105%, 0);
+  transform: translate3d(0, -105%, 0);
+  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=style.css.map */
